<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePageActivity"
    android:background="#1f2936"
    android:orientation="vertical">
    <Button
        android:id="@+id/buttonNewRegistrationForm"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/buttonNewRegistrationForm"
        android:textColor="@color/colorPrimaryDark" />
    <Button
        android:id="@+id/buttonNewEnquiryForm"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/buttonNewEnquiryForm"
        android:textColor="@color/colorPrimaryDark" />
    <Button
        android:id="@+id/buttonAccountManagement"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/buttonAccountManagement"
        android:textColor="@color/colorPrimaryDark" />
    <Button
        android:id="@+id/buttonCalenderManagement"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/buttonCalenderManagement"
        android:textColor="@color/colorPrimaryDark" />
    <Button
        android:id="@+id/buttonMembershipManagement"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/buttonMembershipManagement"
        android:textColor="@color/colorPrimaryDark" />
</LinearLayout>