<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signupbackground">
        <EditText
            android:id="@+id/firstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="120dp"
            android:hint="@string/first_name"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:textColor="#000000"
            android:textColorHint="#000000"
            tools:targetApi="o"
            tools:text="First Name" />
        <EditText
            android:id="@+id/lastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:hint="@string/last_name"
            android:importantForAutofill="no"
            android:inputType="textCapWords"
            android:textColor="#000000"
            android:textColorHint="#000000"
            tools:targetApi="o"
            tools:text="Last Name" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="411dp"
            android:layout_height="109dp"
            android:layout_margin="15dp"
            android:autofillHints="no"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:textColorHint="#000000"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/enter_your_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textColorHint="#000000"
            tools:targetApi="o" />

        <Button
            android:id="@+id/buttonRegister"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="225dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="92dp"
            android:layout_marginTop="50dp"
            android:text="@string/register"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="335dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="92dp"
            android:text="@string/textView2"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:text="Already Registered? SIgn In here" />
</LinearLayout>