<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/phonenobackground">


    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/Phone_Number"
        android:inputType="phone"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="#C9CFC9"
        tools:targetApi="o"
        tools:text="Enter Phone Number" />

    <Button
        android:id="@+id/buttonGetVerificationCode"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:text="@string/get_verification_code"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/EditTextenterVerificationCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:digits="0123456789"
        android:hint="@string/enter_verification_code"
        android:layout_gravity="center"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textColorHint="#C9CFC9"
        tools:targetApi="o" />

    <Button
        android:id="@+id/buttonVerify"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="145dp"
        android:text="@string/verify"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimaryDark" />



</LinearLayout>